fixed the gap that appears when search icon is toggled

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ h1 {
 body {
   overflow-wrap: break-word;
   word-break: keep-all;
+  overflow: hidden;
 }
 
 h1 {
@@ -32,7 +33,8 @@ html {
 }
 
 html {
-  background-color: #f7f7f7;
+  background-color: rgb(247 247 247 / 1);
+  box-shadow: rgb(0 0 0 / 40%) 0px 0px 3.125em 0.5em;
   color: #262626;
 }
 
@@ -274,6 +276,7 @@ span {
   background-color: rgba(255, 255, 255, 0.95);
   border-radius: 3.125em;
   right: 1;
+  margin: 0 auto;
 }
 
 .search-container i {
@@ -305,9 +308,15 @@ main {
   background-color: rgb(247 247 247 / 1);
   padding: 3em;
   border-radius: 1.5em;
-  box-shadow: rgb(0 0 0 / 40%) 0px 0px 3.125em 0.5em;
   margin: 5em auto;
   word-break: keep-all;
+  overflow: hidden;
+}
+
+.search-icon-active .content-container {
+  /* Modify properties to slide the content in/out or show/hide */
+  top: 0;
+  /* Or adjust based on where you want the content */
 }
 
 .main-content {
@@ -409,6 +418,8 @@ main {
   margin-bottom: 2em;
   border-bottom-left-radius: 1.5em;
   border-bottom-right-radius: 1.5em;
+  box-shadow: rgb(0 0 0 / 20%) 0px 0px 1.5625em 0.5em;
+  border-radius: 0.75em;
 }
 
 /* hero post author */
@@ -419,6 +430,9 @@ main {
   border-top-left-radius: 1.5em;
   border-top-right-radius: 1.5em;
   padding: 2em;
+  box-shadow: rgb(0 0 0 / 20%) 0px 0px 1.5625em 0.5em;
+  border-radius: 0.75em;
+  margin-bottom: 2em;
 }
 
 #intro-paragraph p {
@@ -595,6 +609,7 @@ main {
 }
 
 .content-container {
+
   max-width: 90vw;
   margin: 11em auto 5em;
   /* 5em top margin (pushed down from navbar) and centered */
@@ -747,15 +762,12 @@ main {
 .search-popup {
   display: none;
   position: relative;
-  /* or just 'static' */
-  margin: 8em auto 0;
-  /* so it sits below the navbar in normal flow */
+  margin: 1em auto 1em;
   max-width: 600px;
-  /* keep it from being too wide */
-  width: 90%;
-  /* allow it to shrink if you like */
-  padding: 1em;
+  width: 316px;
+  padding: 0.5em;
   background-color: rgb(247 247 247 / 1);
+  box-shadow: rgb(0 0 0 / 40%) 0px 0px 3.125em 0.5em;
   z-index: 10;
   border-radius: 1em;
 }
@@ -1479,18 +1491,6 @@ form button:hover {
     width: 100%;
   }
 
-  .search-popup {
-    margin-top: 1em;
-    display: none;
-    position: fixed;
-    top: 8%;
-    width: 75vw;
-    padding: 0.5em;
-    border-radius: 0.5em;
-    z-index: 9999;
-    left: 50% !important;
-    transform: translateX(-50%) !important;
-  }
 
   .search-popup.show {
     display: block;
@@ -1513,7 +1513,6 @@ form button:hover {
   .search-icon,
   .menu-toggle {
     display: inline-block;
-    margin-left: 0.625em;
   }
 
   .menu-toggle img,
@@ -2002,6 +2001,7 @@ form button:hover {
     flex-direction: column;
     width: 100%;
     margin: 0 auto;
+
   }
 
   /* Each thumbnail container should have a fixed size */
@@ -2135,6 +2135,10 @@ form button:hover {
 
   body {
     font-size: 1.2rem;
+
+  }
+
+  .content-container {
     margin-top: 5em;
   }
 
@@ -2254,12 +2258,7 @@ form button:hover {
     flex-direction: column;
     margin: 0 auto;
     height: auto;
-  }
-
-  body {
-    position: relative;
-    top: 100px;
-    margin-top: 0;
+    gap: 1em;
   }
 
   main {
@@ -2313,19 +2312,36 @@ form button:hover {
     font-size: 1.2rem;
   }
 
+  .iot-updates {
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .iot-updates,
+  .article-grid3,
+  .article-grid2,
+  .article-grid1,
   .article3-viewall,
   .article2-viewall,
   .article1-viewall {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 250px;
     max-width: 480px;
+    height: auto;
     margin: 1em auto;
   }
 
+  .article-grid3 img,
+  .article-grid2 img,
+  .article-grid1 img,
   .article-grid1 img,
   .article3-viewall img,
   .article2-viewall img,
   .article1-viewall img {
-    width: 250px;
+    width: 100%;
+    height: auto;
     aspect-ratio: 16/9;
     object-fit: cover;
     border-radius: 1.5em;
@@ -2376,7 +2392,6 @@ form button:hover {
     width: 319px;
     max-width: 480px;
     margin: 0 auto;
-    margin: 0 auto;
     gap: 0;
   }
 
@@ -2410,6 +2425,8 @@ form button:hover {
   }
 
   .iot-updates {
+    width: 319px;
+    max-width: 480px;
     margin: 0;
     padding: 0;
   }
